adding speakingclock and properties file reolution for sample usecase

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+data.common-data[0].name=oracle
+data.common-data[0].dataType.binaryLargeObject=BYTEA
+data.common-data[0].dataType.characterLargeObject=TEXT
 
+data.common-data[0].functionData.positionOfSubString=POSITION(substr IN str)
+data.common-data[0].functionData.convertToString=TO_CHAR
+
+data.common-data[1].name=postgress
+data.common-data[1].dataType.binaryLargeObject=BLOB
+data.common-data[1].dataType.characterLargeObject=CLOB
+
+data.common-data[1].functionData.positionOfSubString=POS(substr, str)
+data.common-data[1].functionData.convertToString=CONVERT_STR
