sql converter code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,30 @@
-data.common-data[0].name=oracle
-data.common-data[0].dataType.binaryLargeObject=BYTEA
-data.common-data[0].dataType.characterLargeObject=TEXT
+data-system.data-container[0].name=Oracle
+data-system.data-container[0].dataType.binaryLargeObject=BYTEA
+data-system.data-container[0].dataType.characterLargeObject=TEXT
 
-data.common-data[0].functionData.positionOfSubString=POSITION(substr IN str)
-data.common-data[0].functionData.convertToString=TO_CHAR
+data-system.data-container[0].functionData.positionOfSubString=POSITION(substr IN str)
+data-system.data-container[0].functionData.convertToString=TO_CHAR
 
-data.common-data[1].name=postgress
-data.common-data[1].dataType.binaryLargeObject=BLOB
-data.common-data[1].dataType.characterLargeObject=CLOB
+data-system.data-container[0].regexData[0].name=RegexBLOB
+data-system.data-container[0].regexData[0].find=BLOB|TO_CHAR
+data-system.data-container[0].regexData[0].replace=BLOB1
 
-data.common-data[1].functionData.positionOfSubString=POS(substr, str)
-data.common-data[1].functionData.convertToString=CONVERT_STR
+data-system.data-container[0].regexData[1].name=RegexChar
+data-system.data-container[0].regexData[1].find=BLOB|TO_CHAR
+data-system.data-container[0].regexData[1].replace=BLOB1
+
+data-system.data-container[1].name=Postgress
+data-system.data-container[1].dataType.binaryLargeObject=BLOB
+data-system.data-container[1].dataType.characterLargeObject=CLOB
+
+data-system.data-container[1].functionData.positionOfSubString=POS(substr, str)
+data-system.data-container[1].functionData.convertToString=CONVERT_STR
+
+data-system.data-container[1].regexData[0].name=RegexBLOB
+data-system.data-container[1].regexData[0].find=BLOB|TO_CHAR
+data-system.data-container[1].regexData[0].replace=BLOB1
+
+data-system.data-container[1].regexData[1].name=RegexChar
+data-system.data-container[1].regexData[1].find=BLOB|TO_CHAR
+data-system.data-container[1].regexData[1].replace=BLOB1
+
